--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "rss": "https://github.com/craft-glue-cdn-imager-x/releases.atom"
     },
     "require": {
-        "php": ">=7.2.5",
-        "craftcms/cms": "^3.3.0"
+        "php": "^8.0.2",
+        "craftcms/cms": "^4.0.0"
     },
     "autoload": {
         "psr-4": {
